--- a/resource_configs/lambda_endpoints.yml
+++ b/resource_configs/lambda_endpoints.yml
@@ -3,32 +3,29 @@
 # Authorizer Lambda
 # ....
 
-# Test hello world lambda
-hello:
-  description: >-
-    Hello world , make sure fancy organization works
-    make sure aws provider works
-  handler: functions/test/handler.hello
-  events:
-    - http:
-        path: /hello
-        method: get
-        cors: true
-
 textMessage:
   description: >-
     Uses nodeModuleLayer for Twillio API
     Parses input and send text message
   timeout: 10
-  handler: functions/text/handlerTwo.textMessage
+  handler: functions/textMessage.call
   layers:
-    - !Ref NodeModulesLambdaLayer
+    - !Ref TwilioLambdaLayer
+    - !Ref UuidLambdaLayer
+    - !Ref ServicesLambdaLayer
+  role: textMessageRole
   environment:
+    MEMBER_TABLE: ${self:provider.environment.MEMBER_TABLE}
     TWILLIO_ACCOUNT_NUMBER: ${ssm(${self:provider.region}):twillio-account-number}
-    TWILLIO_ACCOUNT_SID:    ${ssm(${self:provider.region}):twillio-account-sid}
-    TWILLIO_AUTH_TOKEN:     ${ssm(${self:provider.region}):twillio-auth-token}
+    TWILLIO_ACCOUNT_SID: ${ssm(${self:provider.region}):twillio-account-sid}
+    TWILLIO_AUTH_TOKEN: ${ssm(${self:provider.region}):twillio-auth-token}
   events:
     - http:
-        path: /text
+        path: /text/{memberId}
         method: post
+        request:
+          parameters:
+            paths:
+              memberId: true
         cors: true
+        # authorization: eventually
