--- a/resource_configs/package_exclusion_list.yml
+++ b/resource_configs/package_exclusion_list.yml
@@ -1,12 +1,12 @@
 # ServerlessFramework Syntax
   - "!*.zip"
+  - "!resource_configs.zip"
   - "!*.md"
   - "!*.txt"
   - "!*.tar.gz"
-  - "!events"
+  - "!layers"
   - "!node_modules"
   - "!resource_configs"
-  - "!spec"
   - "!tests"
   - "!.serverless"
   - "!sample-serverless.yml"
