--- a/resource_configs/lambda_group_endpoints.yml
+++ b/resource_configs/lambda_group_endpoints.yml
@@ -5,7 +5,7 @@ CreateGroup:
   handler: functions/createGroup.call
   layers:
     - !Ref UuidLambdaLayer
-    - !Ref ServicesLambdaLayer
+    - !Ref CoreServicesLambdaLayer
   role: CreateGroupRole
   environment:
     MEMBER_TABLE: ${self:provider.environment.MEMBER_TABLE}
