FetchGroup roles and policies

--- a/resource_configs/iam_policies.yml
+++ b/resource_configs/iam_policies.yml
@@ -22,6 +22,7 @@ Resources:
         - Ref: UpdateMemberRole
         - Ref: UpdateBulkMembersRole
         - Ref: CreateGroupRole
+        - Ref: FetchGroupRole
         - Ref: textMessageRole
         - Ref: emailMessageRole
 
@@ -56,6 +57,7 @@ Resources:
         - Ref: UpdateMemberRole
         - Ref: UpdateBulkMembersRole
         - Ref: CreateGroupRole
+        - Ref: FetchGroupRole
         - Ref: textMessageRole
         - Ref: emailMessageRole
 
