--- a/resource_configs/iam_roles.yml
+++ b/resource_configs/iam_roles.yml
@@ -91,6 +91,19 @@ Resources:
                 - lambda.amazonaws.com
             Action: sts:AssumeRole
 
+  FetchGroupRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: FetchGroupRole
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action: sts:AssumeRole
+
   textMessageRole:
     Type: AWS::IAM::Role
     Properties:
