--- a/member-endpoint-service/resource_configs/lambda_member_endpoints.yml
+++ b/member-endpoint-service/resource_configs/lambda_member_endpoints.yml
@@ -14,7 +14,7 @@ CreateMember:
         path: /wedding/members
         method: post
         cors: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
 
 CreateBulkMembers:
   description: >-
@@ -30,7 +30,7 @@ CreateBulkMembers:
         path: /wedding/members/bulk
         method: post
         cors: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
 
 DeleteMember:
   description: >-
@@ -50,7 +50,7 @@ DeleteMember:
             paths:
               memberId: true
         cors: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
 
 FetchMember:
   description: >-
@@ -71,7 +71,7 @@ FetchMember:
               id: false
               email: false
         cors: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
 
 UpdateMember:
   description: >-
@@ -91,7 +91,7 @@ UpdateMember:
           parameters:
             paths:
               memberId: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
 
 UpdateBulkMembers:
   description: >-
@@ -107,4 +107,4 @@ UpdateBulkMembers:
         path: /wedding/members/bulk
         method: patch
         cors: true
-        # authorizer: ${self:custom.authorizer}
+        authorizer: ${self:custom.authorizer}
