Update authorizer config

--- a/member-endpoint-service/resource_configs/lambda_endpoints.yml
+++ b/member-endpoint-service/resource_configs/lambda_endpoints.yml
@@ -25,7 +25,9 @@ emailMessage:
             paths:
               memberId: true
         cors: true
-        authorizer: ${self:custom.authorizer}
+        authorizer:
+          type: TOKEN
+          authorizerId: ${self:custom.authorizer}
 
 textMessage:
   description: >-
@@ -51,4 +53,6 @@ textMessage:
             paths:
               memberId: true
         cors: true
-        authorizer: ${self:custom.authorizer}
+        authorizer:
+          type: TOKEN
+          authorizerId: ${self:custom.authorizer}
