Fix Dynamo GSI table

--- a/member-endpoint-service/resource_configs/lambda_member_endpoints.yml
+++ b/member-endpoint-service/resource_configs/lambda_member_endpoints.yml
@@ -65,6 +65,7 @@ FetchMember:
   role: FetchMemberRole
   environment:
     MEMBER_TABLE: ${self:provider.environment.MEMBER_TABLE}
+    MEMBER_TABLE_GSI_1: ${self:provider.environment.MEMBER_TABLE_GSI_1}
   layers:
     - !Ref CoreServicesLambdaLayer
   events:
